# shift-intensive-detector

./: .gitignore  README.dataset.txt  README.md  README.roboflow.txt  convert_to_pth.py  data.yaml  pyproject.toml  split_data.py
configs/: train.yaml
configs/data/: cs_datamodule.yaml
configs/experiment/: baseline.yaml  my_exp.yaml
configs/model/: yolo.yaml
src/: train.py
src/models/: yolo_module.py
test/labels/: auto_frame_000069_jpg.rf.00c31741ce2466fdd119206be2e3f962.txt  auto_frame_000081_jpg.rf.08552556805ff8b35af032ea1440b8c0.txt  auto_frame_000093_jpg.rf.97db7afe9ac41c00a1e71c087d21d6c5.txt  auto_frame_000129_jpg.rf.efc046e46cebe126b6104bde8b9c2093.txt  auto_frame_000156_jpg.rf.aa574b78e5fd9ce99ffae12da87f0d7e.txt  auto_frame_000197_jpg.rf.e20506bd01505535758b5ff396b31063.txt  auto_frame_000204_jpg.rf.689794f99b02ce787aca598dd8004649.txt  auto_frame_000207_jpg.rf.ed198d30e8ca8aba94d733e25072fa08.txt  auto_frame_000211_jpg.rf.a4fbe1e9cc34fe6dfe471d20578b2fcc.txt  auto_frame_000212_jpg.rf.e8649831ce65f3e49e534244ec94dddd.txt  auto_frame_000213_jpg.rf.043455905715889854d81a3ca9f142be.txt  auto_frame_000220_jpg.rf.4b8009a628c707ecd96fc4fd7ee4eb23.txt  auto_frame_000222_jpg.rf.a67c3ed5de5228e33168e9ad70fa766d.txt  auto_frame_000223_jpg.rf.8ed1d433df0f67585c0172cc8130cdfb.txt  auto_frame_000224_jpg.rf.e491491233617bba1efa9a073c2f42d9.txt  auto_frame_000225_jpg.rf.4ad57a9023c697c483f788a424825ae5.txt  auto_frame_000226_jpg.rf.f51a70b86fc0804595ba0ff01817b0b5.txt  auto_frame_000227_jpg.rf.38958cc699b31e9fb3b53053101495f3.txt  (+49 more)
train/labels/: CS_1_0000.txt  (+3008 more)
(+187 files in other folders)
