[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[project]
name = "shift-intensive-modeling"
version = "0.1.0"
description = "Detection project"
authors = [
    { name = "Alex Nerf", email = "a.varnakin@g.nsu.ru" },
    {name = "LimeShot",email = "il.chumackov@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12, <3.14.1"
dependencies = [
    "torch (>=2.5.0,<3.0.0)",
    "torchvision (>=0.20.0,<0.28.0)",
    "lightning (>=2.6.1,<3.0.0)",
    "torchmetrics[detection] (>=1.9.0,<2.0.0)",
    "timm (>=1.0.27,<2.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "rootutils (>=1.0.7,<2.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "tensorboard (>=2.20.0,<3.0.0)",
    "hydra-colorlog (>=1.2.0,<2.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "gdown (>=6.0.0,<7.0.0)",
    "ultralytics (>=8.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Добавьте эту секцию в конец файла
[tool.poetry.dependencies.torch]
source = "pytorch-cu121"

[tool.poetry.dependencies.torchvision]
source = "pytorch-cu121"